[]<feat>: 构建 酒店房间管理 模块